# gtk-wordnet-browser

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  gwb_window.c  gwb_window.h  main.c
